<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".MyMusic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/playlist_1"
            android:layout_width="@dimen/pl_ll_width"
            android:layout_height="@dimen/pl_ll_height"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="@drawable/note"
            android:orientation="vertical"
            android:padding="15dp"
            android:weightSum="10">

            <TextView
                style="@style/my_music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/playlist_1"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/pl1_image_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/playlist_img_description"
                android:src="@drawable/song11" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/playlist_2"
            android:layout_width="@dimen/pl_ll_width"
            android:layout_height="@dimen/pl_ll_height"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="@drawable/note"
            android:orientation="vertical"
            android:padding="15dp"
            android:weightSum="10">

            <TextView
                style="@style/my_music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/playlist_2"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/playlist_img_description"
                android:src="@drawable/song12" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/all"
            android:layout_width="@dimen/pl_ll_width"
            android:layout_height="@dimen/pl_ll_height"
            android:layout_margin="30dp"
            android:background="@drawable/note"
            android:orientation="vertical"
            android:padding="15dp"
            android:weightSum="10"
            tools:ignore="UselessParent">

            <TextView
                style="@style/my_music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/playlist_img_description"
                android:src="@drawable/music" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>